--- a/index.html
+++ b/index.html
@@ -75,10 +75,15 @@
 
         <!-- أيقونات -->
         <div class="social-icons">
-            <img src="insta.jpg"> <a href="https://www.instagram.com/doo7m333/?utm_source=ig_web_button_share_sheet">
+            <a class="link" href="https://www.instagram.com/doo7m333/?utm_source=ig_web_button_share_sheet">
+                <img src="images.jpg">
             </a>
-            <img src="discod.png"><a href="https://discord.gg/fFKn2kWv34"> </a>
-            <img src="youtube.png"><a href="https://youtube.com/@doo7m333?si=XjFfSD3-KDVBLUIg"> </a>
+            <a class="link" href="https://discord.gg/fFKn2kWv34">
+                <img src="discod.png">
+            </a>
+            <a class="link" href="https://youtube.com/@doo7m333?si=XjFfSD3-KDVBLUIg">
+                <img src="youtube.png">
+            </a>
         </div>
 
         <!-- الروابط -->
@@ -93,7 +98,7 @@
         </a>
 
         <a class="link" href="https://www.instagram.com/doo7m333/?utm_source=ig_web_button_share_sheet" target="_blank">
-            <img src="insta.jpg">
+            <img src="images.jpg">
             حسابي إنستغرام
         </a>
 
