--- a/index.html
+++ b/index.html
@@ -64,26 +64,25 @@
 </head>
 
 <body>
+    <!-- بداية البطاقة -->
 
     <div class="card">
-
+        <!--بنر-->
+        <img src="doo7m333baner.jpg" style="width:100%; position:absolute; top:0; left:0; z-index:-1;">
         <!-- الصورة -->
-        <img src="doo7m.webp" class="avatar">
+
+        <img src="doo7m333profl.jpg" alt="Avatar" class="avatar">
 
         <!-- الاسم -->
         <h1>Doo7m333</h1>
 
         <!-- أيقونات -->
         <div class="social-icons">
-            <a class="link" href="https://www.instagram.com/doo7m333/?utm_source=ig_web_button_share_sheet">
-                <img src="images.jpg">
-            </a>
-            <a class="link" href="https://discord.gg/fFKn2kWv34">
-                <img src="discod.png">
-            </a>
-            <a class="link" href="https://youtube.com/@doo7m333?si=XjFfSD3-KDVBLUIg">
-                <img src="youtube.png">
-            </a>
+
+            <img src="images.jpg">
+            <img src="discod.png">
+            <img src="youtube.png">
+
         </div>
 
         <!-- الروابط -->
@@ -101,8 +100,13 @@
             <img src="images.jpg">
             حسابي إنستغرام
         </a>
+        <a class="link" href="https://youtu.be/4NoACxllkxs?si=C5-0pfrF7Uv0oi71" target="_blank">
+            <img src="https://i.ytimg.com/vi/4NoACxllkxs/maxresdefault.jpg">
+            top video in my channel
+        </a>
 
     </div>
+    <!-- نهاية البطاقة -->
 
 </body>
 
